[package]
name = "check-domains"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.61"
csv = "1.1.6"
futures-util = "0.3.21"
openssl = "0.10.41"
reqwest = "0.11.11"
serde = { version = "1.0.143", features = ["derive"] }
tokio = { version = "1.20.1", features = ["rt-multi-thread", "macros", "sync", "net"] }
tokio-native-tls = "0.3.0"
tokio-openssl = "0.6.3"
